--- a/resources/css/tabs.css
+++ b/resources/css/tabs.css
@@ -105,3 +105,4 @@
 #latestNews .tabBox{margin-left:10px;width:261px;}
 #tabs-news{width:251px;padding-left:20px;}
 .region .content #equipClassifieds ul li, .region .content #scrapClassifieds ul li{font-family: Arial,Helvetica,sans-serif;}
+#scrapExchangeListings .tabBox{width:831px;}
